# sqlite-demo-poetry

./: .gitignore  README.md  pyproject.toml
data/: demo-data.csv
src/sqlite_demo_poetry/: get_price.py
