[project]
name = "sqlite-demo-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Jmangle93",email = "Jmangle93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
]

[tool.poetry]
packages = [{include = "sqlite_demo_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
